--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cantremember/mongodb-sandbox",
   "version": "0.0.1",
-  "description": "A Sandbox that launches a stand-alone MongoDB instance for use within a Test Suite.",
+  "description": "Launch a stand-alone MongoDB Server for use within a Test Suite.",
   "publishConfig": {
     "access": "public"
   },
@@ -20,9 +20,10 @@
   },
   "scripts": {
     "ci": "npm run test  &&  npm run lint",
+    "jsdoc": "jsdoc2md --configure .jsdoc2md.json > JSDOC.md",
     "lint": "eslint lib/ test/",
-    "preversion": "npm run ci",
-    "test": "tape 'test/**/*.test.js'"
+    "preversion": "npm run ci  &&  npm run jsdoc",
+    "test": "mocha 'test/bootstrap.js' 'test/**/*.test.js' --recursive --ui bdd --reporter spec --timeout 5000"
   },
   "repository": {
     "type": "git",
@@ -36,15 +37,17 @@
   "homepage": "https://github.com/cantremember/mongodb-sandbox#readme",
   "dependencies": {
     "@cantremember/mongodb-down-load": "^2.3.1",
+    "debug": "^4.1.0",
     "mongodb": "^3.1.6",
     "mongodb-prebuilt": "^6.3.6",
     "mongodb-topology-manager": "^2.1.0",
     "portfinder": "^1.0.17"
   },
   "devDependencies": {
-    "chai": "^4.1.2",
-    "eslint": "^4.19.1",
-    "sinon": "^6.1.4",
-    "tape": "^4.9.1"
+    "chai": "^4.2.0",
+    "eslint": "^5.7.0",
+    "jsdoc-to-markdown": "^4.0.1",
+    "mocha": "^5.2.0",
+    "sinon": "^6.3.5"
   }
 }
