--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ci": "npm run test  &&  npm run lint",
     "jsdoc": "jsdoc2md --configure .jsdoc2md.json > JSDOC.md",
     "lint": "eslint lib/ test/",
+    "lock": "npm install --package-lock-only",
     "preversion": "npm run ci  &&  npm run jsdoc",
     "test": "mocha 'test/bootstrap.js' 'test/**/*.test.js' --recursive --ui bdd --reporter spec --timeout 5000"
   },
