rearranging some documentation deckchairs
- method doc for `installSandbox`
- README Features + TODO
- consistent use of the term "Topology" vs. "Server"

--- a/.jsdoc2md.template
+++ b/.jsdoc2md.template
@@ -1,6 +1,6 @@
 # JSDoc for mongodb-sandbox
 
-Launch a stand-alone MongoDB Server for use within a Test Suite.
+Launch a stand-alone MongoDB Topology for use within a Test Suite.
 
 
 ## Examples
