some design reassessments
- pulled Topology and winfinit logic out of Sandbox impl
- name swap; `options` go *in*, `config` comes *out*
- assume local download caching, for ease of use

--- a/.jsdoc2md.template
+++ b/.jsdoc2md.template
@@ -5,9 +5,11 @@ Launch a stand-alone MongoDB Topology for use within a Test Suite.
 
 ## Examples
 
+`mongodb-sandbox` is Promise-based API.
+
 
 Embed a [Lifecycle](#Lifecycle) into the [mocha](https://github.com/mochajs/mocha) Test Framework,
-backed by MongoDB 3.6.8 [Sandbox](#Sandbox) installed to a location re-usable across multiple Test Suite executions.
+backed by MongoDB 3.4.2 [Sandbox](#Sandbox) installed to a location re-usable across multiple Test Suite executions.
 
 > A more flushed-out version of this Example can be found in the [README](./README.md#an-example).
 
@@ -16,7 +18,7 @@ const { createSandbox } = require('@cantremember/mongodb-sandbox');
 
 
 const lifecycle = createSandbox({
-  version: '3.6.8',
+  version: '3.4.2',
 }).lifecycle();
 
 before(lifecycle.beforeAll);
@@ -45,19 +47,34 @@ sandbox.start()
 ```
 
 
-A script to install the latest version of MongoDB to a re-usable location,
+A script to install the latest version of MongoDB to back a [Sandbox](#Sandbox),
 out-of-band from your Test Suite.
 
 ```javascript
 #!/usr/bin/env node
 const { installSandbox } = require('@cantremember/mongodb-sandbox');
 
-installSandbox({
-  downloadDir: '/usr/local/mongodb-sandbox/latest',
-})
+installSandbox()
 .then((sandbox) => {
   console.log('installed the latest version of MongoDB.');
 });
 ```
+
+
+## Options
+
+Configuration properties are documented in [Sandbox.options](#Sandbox.options).
+
+In addition to the properties a [Sandbox](#Sandbox) recognizes,
+the you may provide any options passed to a `MongoDBDownload` instance
+(from the [mongodb-download](https://github.com/winfinit/mongodb-download) module).
+
+Several useful properties are:
+
+- `version` - a specific MongoDB version, eg. '3.4.2';
+  *default* = 'latest'
+- `downloadDir` - the directory where the MongoDB binaries will be downloaded & installed.
+  *default* = a cache local to the `mongodb-sandbox` module.
+
 
 {{>main}}
