--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
   },
   "keywords": [
     "mongodb",
+    "mongoose",
     "sandbox",
     "testing",
+    "test",
+    "mock",
+    "stub",
     "topology"
   ],
   "main": "index.js",
@@ -50,7 +54,7 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "eslint": "^5.7.0",
-    "jsdoc-to-markdown": "^4.0.1",
+    "jsdoc-to-markdown": "^6.0.1",
     "mocha": "^5.2.0",
     "sinon": "^6.3.5"
   }
